# strompreis-mcp

./: .gitignore  .smithery-config-schema.json  LAUNCH_CHECKLIST.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.well-known/: mcp-server-card.json
b2c/: server.py
deploy/: crontab  reddit-post.md  smithery.yaml  strompreis-b2c.service  strompreis-mcp.service
scripts/: setup.sh
src/strompreis_mcp/: __init__.py  auth.py  collector.py  database.py  forecast.py  server.py  smard_client.py
src/strompreis_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
