[project]
name = "strompreis-mcp"
version = "0.2.0"
description = "MCP server for German electricity price forecasts with SQLite persistence"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "DasClown" },
]

[project.scripts]
strompreis-mcp = "strompreis_mcp.server:main"
strompreis-collector = "strompreis_mcp.collector:main"

[project.optional-dependencies]
b2c = ["fastapi", "uvicorn"]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
